# nn

./: fccnn.ipynb  mediumnn.ipynb  pyproject.toml  tdsnn.ipynb
