[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["Kendall Werts <kmwerts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyterlab = "^4.3.2"
notebook = "^7.3.0"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
